@@ -1,3 +1,4 @@
 .Rproj.user
 .Rhistory
 .RData
+*.o*
