@@ -1,10 +1,10 @@
 Package: urltools
 Type: Package
 Title: Vectorised Tools for URL Handling and Parsing
-Version: 1.5.0
-Date: 2016-08-03
+Version: 1.5.1
+Date: 2016-08-30
 Author: Oliver Keyes [aut, cre], Jay Jacobs [aut, cre], Mark Greenaway [ctb],
-    Bob Rudis [ctb]
+    Bob Rudis [ctb], Alex Pinto [ctb], Maryam Khezrzadeh [ctb]
 Maintainer: Oliver Keyes <ironholds@gmail.com>
 Description: A toolkit for handling URLs that so far includes functions for URL
     encoding and decoding, parsing, and parameter extraction. All functions are
